--- a/project1.html
+++ b/project1.html
@@ -1,112 +1,256 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Travelly is a travel agency website that helps you to pick out your holiday vacation">
-    <meta name="robots" content="index,follow">
-    <link rel="icon" href="C:\Users\daris\Desktop\dev ed html-css\img\globe.png">
-    <title>Travelly | Travelling Agency</title>
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Pattaya&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="project1_style.css">
-</head>
-<body>
-    <header class="main-head">
-        <nav>
-            <h1 id="logo"><a href="#hero">Travelly</a></h1>
-            <ul>
-                <li ><a href="#locations" id="locations_nav">Locations</a></li>
-                <li ><a href="#benefits" id="benefits_nav">Benefits</a></li>
-                <li ><a href="#contact" id="contact_nav">Contact</a></li>
-
-            </ul>
-        </nav>
-    </header>
-    <section id="hero"class="hero">
-        <h2>Travel Beyond Limits.</h2>
-        <h3>Start your travel an affrodable price with Travelly<br/>Contact us now bellow.</h3>
-        <button>Book Now</button>    
-    </section>
-    <section  id="locations"class="locations">
-        <header class="locations-head">
-            <h2>The Perfect Travelling Experience.</h2>
-            <h3>We cover everything from picking the perfect hotel,<br>flight and travelling destination.</h3>
-            <img src="cloud1.png" class="moving-cloud-2 cloud">
-            <img src="cloud1.png" class="moving-cloud-1 cloud">
-            
-        </header>
-    </section>
-    <section  id="benefits"class="benefits">
-        <header class="benfits-head">
-        <h2>The Perfect Travell</h2>
-        <h3>We cover all everything from picking the perfect hotel <br>to flight and destination.</h3>
-    </header>
-    <div class="cards">
-        <div class="card">
-            <div class="icon-div">
-            <i class="fas fa-route icons"></i>
-        </div>
-            <h4>Travel</h4>
-            <p>Travel in over 250 countries with no effort.</p>
-
-        </div>
-        <div class="card">
-            <div class="icon-div">
-            <i class="fas fa-bed icons"></i>
-        </div>
-            <h4>Hotel</h4>
-            <p>Hotel located near popular areas.</p>
-
-        </div>
-        <div class="card">
-            <div class="icon-div">
-            <i class="fas fa-plane-departure icons"></i>
-        </div>
-            <h4>Flight</h4>
-            <p>Flight included in every purchased trip.</p>
-
-        </div>
-    </div>
-    </section>
-    <section id="contact">
-        <div class="form-wrapper">
-            <header class="form-head">
-                <h2>Contact Us</h2>
-            </header>
-            <form action="https://formspree.io/f/xoqywrdy"
-            method="POST">
-                <div class="name-form">
-                    <label for="name">Name:</label>
-                    <input type="text" name="name" required>
-                    <div class="email-form">
-                        <label for="email">Email:</label>
-                        <input type="email" name="_replayto" required>
-                    </div>
-                </div>
-                <button type="submit">Submit</button>
-            </form>
-        </div>
-    </section>
-    <footer>
-        <div class="footer-wrapper">
-        <h5>Travelly &copy;</h5>
-            <ul>
-                <li>
-                    <a title="Youtube link" href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube footer-icons"></i></a>
-                </li>
-                <li>
-                    <a title="Instagram link" href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram footer-icons"></i></a>
-                </li>
-                <li>
-                    <a title="Facebook link" href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square footer-icons"></i></a>
-                </li>
-            </ul>
-        </div>
-    </footer>
-        
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta
+			http-equiv="X-UA-Compatible"
+			content="IE=edge"
+		/>
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0"
+		/>
+		<meta
+			name="description"
+			content="Travelly is a travel agency website that helps you to pick out your holiday vacation"
+		/>
+		<meta
+			name="robots"
+			content="index,follow"
+		/>
+		<link
+			rel="icon"
+			href="C:\Users\daris\Desktop\dev ed html-css\img\globe.png"
+		/>
+		<title>
+			Travelly | Travelling Agency
+		</title>
+		<link
+			rel="stylesheet"
+			href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+			integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+			crossorigin="anonymous"
+		/>
+		<link
+			rel="preconnect"
+			href="https://fonts.gstatic.com"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Pattaya&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			rel="stylesheet"
+			href="project1_style.css"
+		/>
+	</head>
+	<body>
+		<header class="main-head">
+			<nav>
+				<h1 id="logo">
+					<a href="#hero">Travelly</a>
+				</h1>
+				<ul>
+					<li>
+						<a
+							href="#locations"
+							id="locations_nav"
+							>Locations</a
+						>
+					</li>
+					<li>
+						<a
+							href="#benefits"
+							id="benefits_nav"
+							>Benefits</a
+						>
+					</li>
+					<li>
+						<a
+							href="#contact"
+							id="contact_nav"
+							>Contact</a
+						>
+					</li>
+				</ul>
+			</nav>
+		</header>
+		<section id="hero" class="hero">
+			<h2>Travel Beyond Limits.</h2>
+			<h3>
+				Start your travel an affrodable
+				price with Travelly<br />Contact
+				us now bellow.
+			</h3>
+			<button>Book Now</button>
+		</section>
+		<section
+			id="locations"
+			class="locations"
+		>
+			<header class="locations-head">
+				<h2>
+					The Perfect Travelling
+					Experience.
+				</h2>
+				<h3>
+					We cover everything from
+					picking the perfect hotel,<br />flight
+					and travelling destination.
+				</h3>
+				<img
+					src="./img/cloud1.png"
+					class="moving-cloud-2 cloud"
+				/>
+				<img
+					src="./img/cloud1.png"
+					class="moving-cloud-1 cloud"
+				/>
+			</header>
+		</section>
+		<section
+			id="benefits"
+			class="benefits"
+		>
+			<header class="benfits-head">
+				<h2>The Perfect Travell</h2>
+				<h3>
+					We cover all everything from
+					picking the perfect hotel
+					<br />to flight and
+					destination.
+				</h3>
+			</header>
+			<div class="cards">
+				<div class="card">
+					<div class="icon-div">
+						<i
+							class="fas fa-route icons"
+						></i>
+					</div>
+					<h4>Travel</h4>
+					<p>
+						Travel in over 250 countries
+						with no effort.
+					</p>
+				</div>
+				<div class="card">
+					<div class="icon-div">
+						<i
+							class="fas fa-bed icons"
+						></i>
+					</div>
+					<h4>Hotel</h4>
+					<p>
+						Hotel located near popular
+						areas.
+					</p>
+				</div>
+				<div class="card">
+					<div class="icon-div">
+						<i
+							class="
+								fas
+								fa-plane-departure
+								icons
+							"
+						></i>
+					</div>
+					<h4>Flight</h4>
+					<p>
+						Flight included in every
+						purchased trip.
+					</p>
+				</div>
+			</div>
+		</section>
+		<section id="contact">
+			<div class="form-wrapper">
+				<header class="form-head">
+					<h2>Contact Us</h2>
+				</header>
+				<form
+					action="https://formspree.io/f/xoqywrdy"
+					method="POST"
+				>
+					<div class="name-form">
+						<label for="name"
+							>Name:</label
+						>
+						<input
+							type="text"
+							name="name"
+							required
+						/>
+						<div class="email-form">
+							<label for="email"
+								>Email:</label
+							>
+							<input
+								type="email"
+								name="_replayto"
+								required
+							/>
+						</div>
+					</div>
+					<button type="submit">
+						Submit
+					</button>
+				</form>
+			</div>
+		</section>
+		<footer>
+			<div class="footer-wrapper">
+				<h5>Travelly &copy;</h5>
+				<ul>
+					<li>
+						<a
+							title="Youtube link"
+							href="https://www.youtube.com/"
+							target="_blank"
+							><i
+								class="
+									fab
+									fa-youtube
+									footer-icons
+								"
+							></i
+						></a>
+					</li>
+					<li>
+						<a
+							title="Instagram link"
+							href="https://www.instagram.com/"
+							target="_blank"
+							><i
+								class="
+									fab
+									fa-instagram
+									footer-icons
+								"
+							></i
+						></a>
+					</li>
+					<li>
+						<a
+							title="Facebook link"
+							href="https://www.facebook.com/"
+							target="_blank"
+							><i
+								class="
+									fab
+									fa-facebook-square
+									footer-icons
+								"
+							></i
+						></a>
+					</li>
+				</ul>
+			</div>
+		</footer>
+	</body>
 </html>
